--- a/Extra/Tabs/tabs.html
+++ b/Extra/Tabs/tabs.html
@@ -1,44 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Interactive Tabs</title>
-    <link rel="stylesheet" href="./assets/styles/tabs.css">
-</head>
+    <link rel="stylesheet" href="./assets/styles/tabs.css" />
+  </head>
 
-<body>
+  <body>
     <div class="tabs-container">
-        <div class="tabs-container">
-            <div class="tabs">
-                <button class="tab-button active">Event</button>
-                <button class="tab-button">Music</button>
-                <button class="tab-button">Street</button>
-            </div>
-            <div class="tab-content">
-                <div id="tab1" class="tab-pane active">
-                    <h2>Explore Events.</h2>
-                    <div class="poster">
-                        <img src="https://img.freepik.com/free-psd/halloween-make-up-woman-triangle_23-2148313632.jpg?t=st=1739596718~exp=1739600318~hmac=de6e1d136a8986f09c4f28115ef7d99fa5e477f08f354575e8c474240558966f&w=1380" alt="poster">
-                    </div>
-                </div>
-                <div id="tab2" class="tab-pane">
-                    <h2>Enjoy Music Nights.</h2>
-                    <div class="poster">
-                        <img src="https://img.freepik.com/free-psd/music-banner-design-template_23-2149081197.jpg?t=st=1739596537~exp=1739600137~hmac=fd1c3e2637bbf67e0e19fbb413e0855cedd62b8d91bcc9832bdbb49d903a4626&w=1380" alt="poster">
-                    </div>
-                </div>
-                <div id="tab3" class="tab-pane">
-                    <h2>Let's Street Dance</h2>
-                    <div class="poster">
-                        <img src="https://img.freepik.com/free-psd/banner-urban-music-design-template_23-2149081155.jpg?t=st=1739596671~exp=1739600271~hmac=1a5409fe37b5edf4ecbe831413c044652313e2fc8197bd987d3250381f2ed86c&w=1380" alt="poster">
-                    </div>
-                </div>
-            </div>
+      <div class="tabs-container">
+        <div class="tabs">
+          <button class="tab-button active">Event</button>
+          <button class="tab-button">Movie</button>
+          <button class="tab-button">Music Night</button>
         </div>
+        <div class="tab-content">
+          <div id="tab1" class="tab-pane active">
+            <h2>Explore Events.</h2>
+            <div class="poster">
+              <div class="poster-img">
+                <img
+                  src="https://images.unsplash.com/photo-1492684223066-81342ee5ff30?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                  alt="poster"
+                />
+              </div>
+              <a href="javascript:void(0);" class="cta">See More</a>
+            </div>
+          </div>
+          <div id="tab2" class="tab-pane">
+            <h2>Watch Movies.</h2>
+            <div class="poster">
+              <div class="poster-img">
+                <img
+                  src="https://images.unsplash.com/photo-1536440136628-849c177e76a1?q=80&w=1925&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                  alt="poster"
+                />
+              </div>
+              <a href="javascript:void(0);" class="cta">See More</a>
+            </div>
+          </div>
+          <div id="tab3" class="tab-pane">
+            <h2>Relax with Music.</h2>
+            <div class="poster">
+              <div class="poster-img">
+                <img
+                  src="https://images.unsplash.com/photo-1598387181032-a3103a2db5b3?q=80&w=2076&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+                  alt="poster"
+                />
+              </div>
+              <a href="javascript:void(0);" class="cta">See More</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="./services/tabs.js"></script>
-</body>
-
+  </body>
 </html>
