--- a/Extra/Tabs/tabs.html
+++ b/Extra/Tabs/tabs.html
@@ -12,7 +12,7 @@
         <div class="tabs">
           <button class="tab-button active">Event</button>
           <button class="tab-button">Movie</button>
-          <button class="tab-button">Music Night</button>
+          <button class="tab-button">Music</button>
         </div>
         <div class="tab-content">
           <div id="tab1" class="tab-pane active">
