Day-33 DOM - Product Management [Dynamic Content] in Javascript

--- a/Day-33-JS/product.html
+++ b/Day-33-JS/product.html
@@ -36,7 +36,7 @@
 
         <!-- Search and Filter -->
         <div class=" controls card">
-            <input type="text" id="searchBox" placeholder="Search products..." class="search-input">
+            <input type="search" id="searchBox" placeholder="Search Product Name..." class="search-input">
             <select id="filterCategory" class="filter-select"></select>
         </div>
 
