--- a/Day-36-JS/Toggle Dark Mode/index.html
+++ b/Day-36-JS/Toggle Dark Mode/index.html
@@ -15,9 +15,9 @@
             <div class="container">
                 <!-- Toggle Button -->
                 <div class="btn-toggle-container d-flex">
-                    <div class="btn-toggle-wrap">
-                        <i class="fa-solid fa-toggle-off"></i>
-                        <i class="fa-solid fa-toggle-on"></i>
+                    <div class="btn-toggle-wrap" id="btn-toggle">
+                        <i class="fa-solid fa-toggle-off" id="btn-toggle-off"></i>
+                        <i class="fa-solid fa-toggle-on" id="btn-toggle-on"></i>
                     </div>
                 </div>
 
@@ -86,6 +86,9 @@
             </div>
         </section>
     </main>
+
+    <!-- script -->
+    <script src="./services/home-repair.js"></script>
 </body>
 
 </html>
