Day-37 DOM - Image Gallery in Javascript

--- a/Day-37-JS/Image Gallery/imageGallery.html
+++ b/Day-37-JS/Image Gallery/imageGallery.html
@@ -8,6 +8,14 @@
 </head>
 
 <body>
+    <header>
+        <section>
+            <div class="container">
+                <h1>Fashion Gallery</h1>
+            </div>
+        </section>
+    </header>
+
     <main>
         <section>
             <div class="container">
