--- a/Day-37-JS/Image Gallery/imageGallery.html
+++ b/Day-37-JS/Image Gallery/imageGallery.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Gallery</title>
     <link rel="stylesheet" href="./assets/styles/imageGallery.css">
+    <script src="./services/imageGallery.js" defer></script>
 </head>
 
 <body>
@@ -24,7 +25,7 @@
             </div>
         </section>
     </main>
-    <script src="./services/imageGallery.js"></script>
+    <!-- <script src="./services/imageGallery.js"></script> -->
 </body>
 
 </html>
