Day-39 DOM - Custom Event in Javascript

--- a/Day-38-JS/CustomEvents/custom_events.html
+++ b/Day-38-JS/CustomEvents/custom_events.html
@@ -11,7 +11,12 @@
 <body>
     <main>
         <section>
-            <div class="container">
+            <div class="container d-flex">
+                <form method="post" class="d-flex">
+                    <label for="contentInput">Content:</label>
+                    <textarea rows="4" class="contentInput" id="contentInput"></textarea>
+                    <button type="submit" onclick="addContent(event)">Add</button>
+                </form>
                 <div class="contentBox" id="contentBox"></div>
             </div>
         </section>
