--- a/Day-39-JS/Geolocation API/geolocation.html
+++ b/Day-39-JS/Geolocation API/geolocation.html
@@ -6,38 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geolocation</title>
     <link rel="stylesheet" href="./assets/styles/geolocation.css">
+    <script src="./services/finisher-header.es5.min.js" defer></script>
+    <script src="./services/finisherHeader.js" defer></script>
     <script src="./services/geolocation.js" defer></script>
 </head>
 
 <body>
-    <div class="access-denied" id="accessDenied">
-        <span id="userDenied">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
-                <path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zm0-384c13.3 0 24 10.7 24 24l0 112c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-112c0-13.3 10.7-24 24-24zM224 352a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z" />
-            </svg>
-            User Denied</span>
+
+    <div class="header finisher-header" style="width: 100%; height: 100dvh;">
+        <div class="access-denied" id="accessDenied">
+            <span id="userDenied">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
+                    <path d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zm0-384c13.3 0 24 10.7 24 24l0 112c0 13.3-10.7 24-24 24s-24-10.7-24-24l0-112c0-13.3 10.7-24 24-24zM224 352a32 32 0 1 1 64 0 32 32 0 1 1 -64 0z" />
+                </svg>
+                User Denied</span>
+        </div>
+        <main class="wrapper">
+            <section class="geo-section">
+                <div class="container">
+                    <h1>Find Your Coordinates</h1>
+                    <button class="btn-coord" id="btnCoord">Get Address</button>
+                    <div class="coord-display">
+                        <div class="latitude-wrap">
+                            <span class="label">Latitude:</span> <span id="latitude">--</span>
+                        </div>
+                        <div class="latitude-wrap">
+                            <span class="label">Longitude:</span> <span id="longitude">--</span>
+                        </div>
+                    </div>
+                    <div class="coord-display">
+                        <div class="latitude-wrap">
+                            <span class="label">Address:</span> <span id="address">--</span>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
     </div>
-    <main class="wrapper">
-        <section class="geo-section">
-            <div class="container">
-                <h1>Find Your Coordinates</h1>
-                <button class="btn-coord" id="btnCoord">Get Address</button>
-                <div class="coord-display">
-                    <div class="latitude-wrap">
-                        <span class="label">Latitude:</span> <span id="latitude">--</span>
-                    </div>
-                    <div class="latitude-wrap">
-                        <span class="label">Longitude:</span> <span id="longitude">--</span>
-                    </div>
-                </div>
-                <div class="coord-display">
-                    <div class="latitude-wrap">
-                        <span class="label">Address:</span> <span id="address">--</span>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </main>
 </body>
 
 </html>
