--- a/Alphabet_Generator/text-generator.html
+++ b/Alphabet_Generator/text-generator.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ASCII Text Generator</title>
+    <title>Alphabets Generator</title>
     <link rel="stylesheet" href="./assets/styles/text-generator.css">
     <script src="./services/text-generator.js" defer></script>
 </head>
 
 <body>
     <div class="container">
-        <h1>✨ Alphabet Generator ✨</h1>
+        <h1>✨ Alphabets Generator ✨</h1>
         <textarea id="inputText" rows="2" placeholder="Type your text..." onInput="generateASCII()"></textarea>
-        <pre id="asciiOutput">ASCII text will appear here...</pre>
+        <pre id="asciiOutput">Alphabets will appear here...</pre>
     </div>
 </body>
 
